@@ -13,6 +13,7 @@
  */
 package com.facebook.presto.sql.gen;
 
+import com.facebook.airlift.log.Logger;
 import com.facebook.presto.bytecode.BytecodeBlock;
 import com.facebook.presto.bytecode.BytecodeNode;
 import com.facebook.presto.bytecode.ClassDefinition;
@@ -24,8 +25,12 @@ import com.facebook.presto.bytecode.Scope;
 import com.facebook.presto.bytecode.Variable;
 import com.facebook.presto.bytecode.control.ForLoop;
 import com.facebook.presto.bytecode.control.IfStatement;
+import com.facebook.presto.common.Page;
+import com.facebook.presto.common.block.Block;
+import com.facebook.presto.common.block.BlockBuilder;
+import com.facebook.presto.common.function.SqlFunctionProperties;
 import com.facebook.presto.metadata.Metadata;
-import com.facebook.presto.operator.DriverYieldSignal;
+import com.facebook.presto.operator.Work;
 import com.facebook.presto.operator.project.ConstantPageProjection;
 import com.facebook.presto.operator.project.GeneratedPageProjection;
 import com.facebook.presto.operator.project.InputChannels;
@@ -33,49 +38,50 @@ import com.facebook.presto.operator.project.InputPageProjection;
 import com.facebook.presto.operator.project.PageFieldsToInputParametersRewriter;
 import com.facebook.presto.operator.project.PageFilter;
 import com.facebook.presto.operator.project.PageProjection;
-import com.facebook.presto.operator.project.PageProjectionOutput;
+import com.facebook.presto.operator.project.PageProjectionWithOutputs;
 import com.facebook.presto.operator.project.SelectedPositions;
-import com.facebook.presto.spi.ConnectorSession;
-import com.facebook.presto.spi.Page;
 import com.facebook.presto.spi.PrestoException;
-import com.facebook.presto.spi.block.Block;
-import com.facebook.presto.spi.block.BlockBuilder;
+import com.facebook.presto.spi.function.SqlFunctionId;
+import com.facebook.presto.spi.function.SqlInvokedFunction;
+import com.facebook.presto.spi.relation.CallExpression;
+import com.facebook.presto.spi.relation.ConstantExpression;
+import com.facebook.presto.spi.relation.DeterminismEvaluator;
+import com.facebook.presto.spi.relation.InputReferenceExpression;
+import com.facebook.presto.spi.relation.LambdaDefinitionExpression;
+import com.facebook.presto.spi.relation.RowExpression;
+import com.facebook.presto.spi.relation.RowExpressionVisitor;
+import com.facebook.presto.spi.relation.SpecialFormExpression;
+import com.facebook.presto.spi.relation.VariableReferenceExpression;
 import com.facebook.presto.sql.gen.LambdaBytecodeGenerator.CompiledLambda;
 import com.facebook.presto.sql.planner.CompilerConfig;
-import com.facebook.presto.sql.relational.CallExpression;
-import com.facebook.presto.sql.relational.ConstantExpression;
-import com.facebook.presto.sql.relational.DeterminismEvaluator;
-import com.facebook.presto.sql.relational.Expressions;
-import com.facebook.presto.sql.relational.InputReferenceExpression;
-import com.facebook.presto.sql.relational.LambdaDefinitionExpression;
-import com.facebook.presto.sql.relational.RowExpression;
-import com.facebook.presto.sql.relational.RowExpressionVisitor;
-import com.google.common.base.VerifyException;
+import com.facebook.presto.sql.relational.RowExpressionDeterminismEvaluator;
+import com.google.common.annotations.VisibleForTesting;
+import com.google.common.base.Joiner;
 import com.google.common.cache.CacheBuilder;
 import com.google.common.cache.CacheLoader;
 import com.google.common.cache.LoadingCache;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
+import com.google.common.primitives.Primitives;
 import org.weakref.jmx.Managed;
 import org.weakref.jmx.Nested;
 
 import javax.annotation.Nullable;
 import javax.inject.Inject;
 
+import java.util.Collection;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
 import java.util.TreeSet;
-import java.util.function.Consumer;
 import java.util.function.Supplier;
+import java.util.stream.IntStream;
 
 import static com.facebook.presto.bytecode.Access.FINAL;
 import static com.facebook.presto.bytecode.Access.PRIVATE;
 import static com.facebook.presto.bytecode.Access.PUBLIC;
 import static com.facebook.presto.bytecode.Access.a;
-import static com.facebook.presto.bytecode.CompilerUtils.defineClass;
-import static com.facebook.presto.bytecode.CompilerUtils.makeClassName;
 import static com.facebook.presto.bytecode.Parameter.arg;
 import static com.facebook.presto.bytecode.ParameterizedType.type;
 import static com.facebook.presto.bytecode.expression.BytecodeExpressions.add;
@@ -83,27 +89,48 @@ import static com.facebook.presto.bytecode.expression.BytecodeExpressions.and;
 import static com.facebook.presto.bytecode.expression.BytecodeExpressions.constantBoolean;
 import static com.facebook.presto.bytecode.expression.BytecodeExpressions.constantFalse;
 import static com.facebook.presto.bytecode.expression.BytecodeExpressions.constantInt;
+import static com.facebook.presto.bytecode.expression.BytecodeExpressions.constantNull;
 import static com.facebook.presto.bytecode.expression.BytecodeExpressions.invokeStatic;
 import static com.facebook.presto.bytecode.expression.BytecodeExpressions.lessThan;
 import static com.facebook.presto.bytecode.expression.BytecodeExpressions.newArray;
 import static com.facebook.presto.bytecode.expression.BytecodeExpressions.not;
 import static com.facebook.presto.operator.project.PageFieldsToInputParametersRewriter.rewritePageFieldsToInputParameters;
 import static com.facebook.presto.spi.StandardErrorCode.COMPILER_ERROR;
-import static com.facebook.presto.sql.gen.BytecodeUtils.generateWrite;
+import static com.facebook.presto.sql.gen.BytecodeUtils.boxPrimitiveIfNecessary;
 import static com.facebook.presto.sql.gen.BytecodeUtils.invoke;
-import static com.facebook.presto.sql.gen.LambdaAndTryExpressionExtractor.extractLambdaAndTryExpressions;
+import static com.facebook.presto.sql.gen.BytecodeUtils.unboxPrimitiveIfNecessary;
+import static com.facebook.presto.sql.gen.CommonSubExpressionRewriter.CommonSubExpressionFields;
+import static com.facebook.presto.sql.gen.CommonSubExpressionRewriter.CommonSubExpressionFields.declareCommonSubExpressionFields;
+import static com.facebook.presto.sql.gen.CommonSubExpressionRewriter.CommonSubExpressionFields.initializeCommonSubExpressionFields;
+import static com.facebook.presto.sql.gen.CommonSubExpressionRewriter.collectCSEByLevel;
+import static com.facebook.presto.sql.gen.CommonSubExpressionRewriter.getExpressionsPartitionedByCSE;
+import static com.facebook.presto.sql.gen.CommonSubExpressionRewriter.rewriteExpressionWithCSE;
+import static com.facebook.presto.sql.gen.LambdaBytecodeGenerator.generateMethodsForLambda;
+import static com.facebook.presto.sql.relational.Expressions.subExpressions;
+import static com.facebook.presto.util.CompilerUtils.defineClass;
+import static com.facebook.presto.util.CompilerUtils.makeClassName;
 import static com.facebook.presto.util.Reflection.constructorMethodHandle;
 import static com.google.common.base.MoreObjects.toStringHelper;
-import static java.lang.String.format;
+import static com.google.common.base.Preconditions.checkArgument;
+import static com.google.common.base.Verify.verify;
+import static com.google.common.collect.ImmutableList.toImmutableList;
+import static com.google.common.collect.ImmutableMap.toImmutableMap;
+import static java.util.Collections.emptyMap;
 import static java.util.Objects.requireNonNull;
 
 public class PageFunctionCompiler
 {
+    private static Logger log = Logger.get(PageFunctionCompiler.class);
+    // Benchmark and experiments showed that when we put too many projections into a single PageProjection, performance degrades. Flamechart shows that a lot of cpus are
+    // spent in evaluate. The root cause is not well understood. Maybe when the function is too large JIT has problem optimizing it. Empirical evidence shows that when there
+    // are less than 10 projections performance is generally better with common sub-expressions. So we set an upper limit on how many projections we would compile together here.
+    private static final int MAX_PROJECTION_GROUP_SIZE = 10;
+
     private final Metadata metadata;
     private final DeterminismEvaluator determinismEvaluator;
 
-    private final LoadingCache<RowExpression, Supplier<PageProjection>> projectionCache;
-    private final LoadingCache<RowExpression, Supplier<PageFilter>> filterCache;
+    private final LoadingCache<CacheKey, Supplier<PageProjection>> projectionCache;
+    private final LoadingCache<CacheKey, Supplier<PageFilter>> filterCache;
 
     private final CacheStatsMBean projectionCacheStats;
     private final CacheStatsMBean filterCacheStats;
@@ -117,13 +144,13 @@ public class PageFunctionCompiler
     public PageFunctionCompiler(Metadata metadata, int expressionCacheSize)
     {
         this.metadata = requireNonNull(metadata, "metadata is null");
-        this.determinismEvaluator = new DeterminismEvaluator(metadata.getFunctionRegistry());
+        this.determinismEvaluator = new RowExpressionDeterminismEvaluator(metadata.getFunctionAndTypeManager());
 
         if (expressionCacheSize > 0) {
             projectionCache = CacheBuilder.newBuilder()
                     .recordStats()
                     .maximumSize(expressionCacheSize)
-                    .build(CacheLoader.from(projection -> compileProjectionInternal(projection, Optional.empty())));
+                    .build(CacheLoader.from(cacheKey -> compileProjectionInternal(cacheKey.sqlFunctionProperties, cacheKey.sessionFunctions, cacheKey.rowExpressions, cacheKey.isOptimizeCommonSubExpression, Optional.empty())));
             projectionCacheStats = new CacheStatsMBean(projectionCache);
         }
         else {
@@ -135,7 +162,7 @@ public class PageFunctionCompiler
             filterCache = CacheBuilder.newBuilder()
                     .recordStats()
                     .maximumSize(expressionCacheSize)
-                    .build(CacheLoader.from(filter -> compileFilterInternal(filter, Optional.empty())));
+                    .build(CacheLoader.from(cacheKey -> compileFilterInternal(cacheKey.sqlFunctionProperties, cacheKey.sessionFunctions, cacheKey.rowExpressions.get(0), cacheKey.isOptimizeCommonSubExpression, Optional.empty())));
             filterCacheStats = new CacheStatsMBean(filterCache);
         }
         else {
@@ -160,21 +187,80 @@ public class PageFunctionCompiler
         return filterCacheStats;
     }
 
-    public Supplier<PageProjection> compileProjection(RowExpression projection, Optional<String> classNameSuffix)
+    public List<Supplier<PageProjectionWithOutputs>> compileProjections(
+            SqlFunctionProperties sqlFunctionProperties,
+            Map<SqlFunctionId, SqlInvokedFunction> sessionFunctions,
+            List<? extends RowExpression> projections,
+            boolean isOptimizeCommonSubExpression,
+            Optional<String> classNameSuffix)
     {
-        if (projectionCache == null) {
-            return compileProjectionInternal(projection, classNameSuffix);
+        if (isOptimizeCommonSubExpression) {
+            ImmutableList.Builder<Supplier<PageProjectionWithOutputs>> pageProjections = ImmutableList.builder();
+            ImmutableMap.Builder<RowExpression, Integer> expressionsWithPositionBuilder = ImmutableMap.builder();
+            for (int i = 0; i < projections.size(); i++) {
+                RowExpression projection = projections.get(i);
+                if (projection instanceof ConstantExpression || projection instanceof InputReferenceExpression) {
+                    pageProjections.add(toPageProjectionWithOutputs(compileProjection(sqlFunctionProperties, sessionFunctions, projection, classNameSuffix), new int[] {i}));
+                }
+                else {
+                    expressionsWithPositionBuilder.put(projection, i);
+                }
+            }
+            Map<RowExpression, Integer> expressionsWithPosition = expressionsWithPositionBuilder.build();
+
+            Map<List<RowExpression>, Boolean> projectionsPartitionedByCSE = getExpressionsPartitionedByCSE(expressionsWithPosition.keySet(), MAX_PROJECTION_GROUP_SIZE);
+
+            for (Map.Entry<List<RowExpression>, Boolean> entry : projectionsPartitionedByCSE.entrySet()) {
+                if (entry.getValue()) {
+                    pageProjections.add(toPageProjectionWithOutputs(
+                            compileProjectionCached(sqlFunctionProperties, sessionFunctions, entry.getKey(), true, classNameSuffix),
+                            toIntArray(entry.getKey().stream().map(expressionsWithPosition::get).collect(toImmutableList()))));
+                }
+                else {
+                    verify(entry.getKey().size() == 1, "Expect non-cse expression list to only have one element");
+                    RowExpression projection = entry.getKey().get(0);
+                    pageProjections.add(toPageProjectionWithOutputs(
+                            compileProjection(sqlFunctionProperties, sessionFunctions, projection, classNameSuffix),
+                            new int[] {expressionsWithPosition.get(projection)}));
+                }
+            }
+            return pageProjections.build();
         }
-        return projectionCache.getUnchecked(projection);
+        return IntStream.range(0, projections.size())
+                .mapToObj(outputChannel -> toPageProjectionWithOutputs(
+                        compileProjection(sqlFunctionProperties, sessionFunctions, projections.get(outputChannel), classNameSuffix),
+                        new int[] {outputChannel}))
+                .collect(toImmutableList());
     }
 
-    private Supplier<PageProjection> compileProjectionInternal(RowExpression projection, Optional<String> classNameSuffix)
+    @VisibleForTesting
+    public List<Supplier<PageProjectionWithOutputs>> compileProjections(
+            SqlFunctionProperties sqlFunctionProperties,
+            List<? extends RowExpression> projections,
+            boolean isOptimizeCommonSubExpression,
+            Optional<String> classNameSuffix)
     {
-        requireNonNull(projection, "projection is null");
+        return compileProjections(sqlFunctionProperties, emptyMap(), projections, isOptimizeCommonSubExpression, classNameSuffix);
+    }
 
+    @VisibleForTesting
+    public Supplier<PageProjection> compileProjection(
+            SqlFunctionProperties sqlFunctionProperties,
+            RowExpression projection,
+            Optional<String> classNameSuffix)
+    {
+        return compileProjection(sqlFunctionProperties, emptyMap(), projection, classNameSuffix);
+    }
+
+    private Supplier<PageProjection> compileProjection(
+            SqlFunctionProperties sqlFunctionProperties,
+            Map<SqlFunctionId, SqlInvokedFunction> sessionFunctions,
+            RowExpression projection,
+            Optional<String> classNameSuffix)
+    {
         if (projection instanceof InputReferenceExpression) {
             InputReferenceExpression input = (InputReferenceExpression) projection;
-            InputPageProjection projectionFunction = new InputPageProjection(input.getField(), input.getType());
+            InputPageProjection projectionFunction = new InputPageProjection(input.getField());
             return () -> projectionFunction;
         }
 
@@ -184,67 +270,163 @@ public class PageFunctionCompiler
             return () -> projectionFunction;
         }
 
-        PageFieldsToInputParametersRewriter.Result result = rewritePageFieldsToInputParameters(projection);
+        return compileProjectionCached(sqlFunctionProperties, sessionFunctions, ImmutableList.of(projection), false, classNameSuffix);
+    }
+
+    private Supplier<PageProjection> compileProjectionCached(
+            SqlFunctionProperties sqlFunctionProperties,
+            Map<SqlFunctionId, SqlInvokedFunction> sessionFunctions,
+            List<RowExpression> projections,
+            boolean isOptimizeCommonSubExpression,
+            Optional<String> classNameSuffix)
+    {
+        if (projectionCache == null) {
+            return compileProjectionInternal(sqlFunctionProperties, sessionFunctions, projections, isOptimizeCommonSubExpression, classNameSuffix);
+        }
+        return projectionCache.getUnchecked(new CacheKey(sqlFunctionProperties, sessionFunctions, projections, isOptimizeCommonSubExpression));
+    }
+
+    private Supplier<PageProjectionWithOutputs> toPageProjectionWithOutputs(Supplier<PageProjection> pageProjection, int[] outputChannels)
+    {
+        return () -> new PageProjectionWithOutputs(pageProjection.get(), outputChannels);
+    }
+
+    private Supplier<PageProjection> compileProjectionInternal(
+            SqlFunctionProperties sqlFunctionProperties,
+            Map<SqlFunctionId, SqlInvokedFunction> sessionFunctions,
+            List<RowExpression> projections,
+            boolean isOptimizeCommonSubExpression,
+            Optional<String> classNameSuffix)
+    {
+        requireNonNull(projections, "projections is null");
+        checkArgument(!projections.isEmpty() && projections.stream().allMatch(projection -> projection instanceof CallExpression || projection instanceof SpecialFormExpression));
+
+        PageFieldsToInputParametersRewriter.Result result = rewritePageFieldsToInputParameters(projections);
+        List<RowExpression> rewrittenExpression = result.getRewrittenExpressions();
 
         CallSiteBinder callSiteBinder = new CallSiteBinder();
 
-        // generate PageProjectionOutput
-        ClassDefinition pageProjectionOutputDefinition = definePageProjectOutputClass(result.getRewrittenExpression(), callSiteBinder, classNameSuffix);
+        // generate Work
+        ClassDefinition pageProjectionWorkDefinition = definePageProjectWorkClass(
+                sqlFunctionProperties,
+                sessionFunctions,
+                rewrittenExpression,
+                callSiteBinder,
+                isOptimizeCommonSubExpression,
+                classNameSuffix);
 
-        Class<? extends PageProjectionOutput> pageProjectionOutputClass;
+        Class<? extends Work> pageProjectionWorkClass;
         try {
-            pageProjectionOutputClass = defineClass(pageProjectionOutputDefinition, PageProjectionOutput.class, callSiteBinder.getBindings(), getClass().getClassLoader());
+            pageProjectionWorkClass = defineClass(pageProjectionWorkDefinition, Work.class, callSiteBinder.getBindings(), getClass().getClassLoader());
+        }
+        catch (PrestoException prestoException) {
+            throw prestoException;
         }
         catch (Exception e) {
             throw new PrestoException(COMPILER_ERROR, e);
         }
 
         return () -> new GeneratedPageProjection(
-                result.getRewrittenExpression(),
-                determinismEvaluator.isDeterministic(result.getRewrittenExpression()),
+                rewrittenExpression,
+                rewrittenExpression.stream().allMatch(determinismEvaluator::isDeterministic),
                 result.getInputChannels(),
-                constructorMethodHandle(pageProjectionOutputClass, BlockBuilder.class, ConnectorSession.class, DriverYieldSignal.class, Page.class, SelectedPositions.class));
+                constructorMethodHandle(pageProjectionWorkClass, List.class, SqlFunctionProperties.class, Page.class, SelectedPositions.class));
     }
 
-    private static ParameterizedType generateProjectionOutputClassName(Optional<String> classNameSuffix)
+    private static ParameterizedType generateProjectionWorkClassName(Optional<String> classNameSuffix)
     {
-        StringBuilder className = new StringBuilder(PageProjectionOutput.class.getSimpleName());
-        classNameSuffix.ifPresent(suffix -> className.append("_").append(suffix.replace('.', '_')));
-        return makeClassName(className.toString());
+        return makeClassName("PageProjectionWork", classNameSuffix);
     }
 
-    private ClassDefinition definePageProjectOutputClass(RowExpression projection, CallSiteBinder callSiteBinder, Optional<String> classNameSuffix)
+    private ClassDefinition definePageProjectWorkClass(
+            SqlFunctionProperties sqlFunctionProperties,
+            Map<SqlFunctionId, SqlInvokedFunction> sessionFunctions,
+            List<RowExpression> projections,
+            CallSiteBinder callSiteBinder,
+            boolean isOptimizeCommonSubExpression,
+            Optional<String> classNameSuffix)
     {
         ClassDefinition classDefinition = new ClassDefinition(
                 a(PUBLIC, FINAL),
-                generateProjectionOutputClassName(classNameSuffix),
+                generateProjectionWorkClassName(classNameSuffix),
                 type(Object.class),
-                type(PageProjectionOutput.class));
+                type(Work.class));
 
-        FieldDefinition blockBuilderField = classDefinition.declareField(a(PRIVATE), "blockBuilder", BlockBuilder.class);
-        FieldDefinition sessionField = classDefinition.declareField(a(PRIVATE), "session", ConnectorSession.class);
-        FieldDefinition yieldSignalField = classDefinition.declareField(a(PRIVATE), "yieldSignal", DriverYieldSignal.class);
+        FieldDefinition blockBuilderFields = classDefinition.declareField(a(PRIVATE), "blockBuilders", type(List.class, BlockBuilder.class));
+        FieldDefinition propertiesField = classDefinition.declareField(a(PRIVATE), "properties", SqlFunctionProperties.class);
         FieldDefinition pageField = classDefinition.declareField(a(PRIVATE), "page", Page.class);
         FieldDefinition selectedPositionsField = classDefinition.declareField(a(PRIVATE), "selectedPositions", SelectedPositions.class);
         FieldDefinition nextIndexOrPositionField = classDefinition.declareField(a(PRIVATE), "nextIndexOrPosition", int.class);
+        FieldDefinition resultField = classDefinition.declareField(a(PRIVATE), "result", List.class);
 
         CachedInstanceBinder cachedInstanceBinder = new CachedInstanceBinder(classDefinition, callSiteBinder);
 
-        // compute
-        generateComputeMethod(classDefinition, blockBuilderField, sessionField, yieldSignalField, pageField, selectedPositionsField, nextIndexOrPositionField);
+        // process
+        generateProcessMethod(classDefinition, blockBuilderFields, projections.size(), propertiesField, pageField, selectedPositionsField, nextIndexOrPositionField, resultField);
+
+        // getResult
+        MethodDefinition method = classDefinition.declareMethod(a(PUBLIC), "getResult", type(Object.class), ImmutableList.of());
+        method.getBody().append(method.getThis().getField(resultField)).ret(Object.class);
+
+        Map<LambdaDefinitionExpression, CompiledLambda> compiledLambdaMap = generateMethodsForLambda(classDefinition,
+                callSiteBinder,
+                cachedInstanceBinder,
+                projections,
+                metadata,
+                sqlFunctionProperties,
+                sessionFunctions,
+                "");
+
+        // cse
+        Map<VariableReferenceExpression, CommonSubExpressionFields> cseFields = ImmutableMap.of();
+
+        RowExpressionCompiler compiler = new RowExpressionCompiler(
+                classDefinition,
+                callSiteBinder,
+                cachedInstanceBinder,
+                new FieldAndVariableReferenceCompiler(callSiteBinder, cseFields),
+                metadata,
+                sqlFunctionProperties,
+                sessionFunctions,
+                compiledLambdaMap);
+
+        if (isOptimizeCommonSubExpression) {
+            Map<Integer, Map<RowExpression, VariableReferenceExpression>> commonSubExpressionsByLevel = collectCSEByLevel(projections);
+            if (!commonSubExpressionsByLevel.isEmpty()) {
+                cseFields = declareCommonSubExpressionFields(classDefinition, commonSubExpressionsByLevel);
+                compiler = new RowExpressionCompiler(
+                        classDefinition,
+                        callSiteBinder,
+                        cachedInstanceBinder,
+                        new FieldAndVariableReferenceCompiler(callSiteBinder, cseFields),
+                        metadata,
+                        sqlFunctionProperties,
+                        sessionFunctions,
+                        compiledLambdaMap);
+
+                generateCommonSubExpressionMethods(classDefinition, compiler, commonSubExpressionsByLevel, cseFields);
+                Map<RowExpression, VariableReferenceExpression> commonSubExpressions = commonSubExpressionsByLevel.values().stream()
+                        .flatMap(m -> m.entrySet().stream())
+                        .collect(toImmutableMap(Map.Entry::getKey, Map.Entry::getValue));
+                projections = projections.stream().map(projection -> rewriteExpressionWithCSE(projection, commonSubExpressions)).collect(toImmutableList());
+                if (log.isDebugEnabled()) {
+                    log.debug("Extracted %d common sub-expressions", commonSubExpressions.size());
+                    commonSubExpressions.entrySet().forEach(entry -> log.debug("\t%s = %s", entry.getValue(), entry.getKey()));
+                    log.debug("Rewrote %d projections: %s", projections.size(), Joiner.on(", ").join(projections));
+                }
+            }
+        }
 
         // evaluate
-        PreGeneratedExpressions preGeneratedExpressions = generateMethodsForLambdaAndTry(classDefinition, callSiteBinder, cachedInstanceBinder, projection);
-        generateEvaluateMethod(classDefinition, callSiteBinder, cachedInstanceBinder, preGeneratedExpressions, projection, blockBuilderField);
+        generateEvaluateMethod(classDefinition, compiler, projections, blockBuilderFields, cseFields);
 
         // constructor
-        Parameter blockBuilder = arg("blockBuilder", BlockBuilder.class);
-        Parameter session = arg("session", ConnectorSession.class);
-        Parameter yieldSignal = arg("yieldSignal", DriverYieldSignal.class);
+        Parameter blockBuilders = arg("blockBuilders", type(List.class, BlockBuilder.class));
+        Parameter properties = arg("properties", SqlFunctionProperties.class);
         Parameter page = arg("page", Page.class);
         Parameter selectedPositions = arg("selectedPositions", SelectedPositions.class);
 
-        MethodDefinition constructorDefinition = classDefinition.declareConstructor(a(PUBLIC), blockBuilder, session, yieldSignal, page, selectedPositions);
+        MethodDefinition constructorDefinition = classDefinition.declareConstructor(a(PUBLIC), blockBuilders, properties, page, selectedPositions);
 
         BytecodeBlock body = constructorDefinition.getBody();
         Variable thisVariable = constructorDefinition.getThis();
@@ -252,32 +434,32 @@ public class PageFunctionCompiler
         body.comment("super();")
                 .append(thisVariable)
                 .invokeConstructor(Object.class)
-                .append(thisVariable.setField(blockBuilderField, blockBuilder))
-                .append(thisVariable.setField(sessionField, session))
-                .append(thisVariable.setField(yieldSignalField, yieldSignal))
+                .append(thisVariable.setField(blockBuilderFields, invokeStatic(ImmutableList.class, "copyOf", ImmutableList.class, blockBuilders.cast(Collection.class))))
+                .append(thisVariable.setField(propertiesField, properties))
                 .append(thisVariable.setField(pageField, page))
                 .append(thisVariable.setField(selectedPositionsField, selectedPositions))
-                .append(thisVariable.setField(nextIndexOrPositionField, selectedPositions.invoke("getOffset", int.class)));
+                .append(thisVariable.setField(nextIndexOrPositionField, selectedPositions.invoke("getOffset", int.class)))
+                .append(thisVariable.setField(resultField, constantNull(Block.class)));
+
+        initializeCommonSubExpressionFields(cseFields.values(), thisVariable, body);
 
         cachedInstanceBinder.generateInitializations(thisVariable, body);
-        for (CompiledLambda compiledLambda : preGeneratedExpressions.getCompiledLambdaMap().values()) {
-            compiledLambda.generateInitialization(thisVariable, body);
-        }
         body.ret();
 
         return classDefinition;
     }
 
-    private static MethodDefinition generateComputeMethod(
+    private static MethodDefinition generateProcessMethod(
             ClassDefinition classDefinition,
-            FieldDefinition blockBuilder,
-            FieldDefinition session,
-            FieldDefinition yieldSignal,
+            FieldDefinition blockBuilders,
+            int blockBuilderSize,
+            FieldDefinition properties,
             FieldDefinition page,
             FieldDefinition selectedPositions,
-            FieldDefinition nextIndexOrPosition)
+            FieldDefinition nextIndexOrPosition,
+            FieldDefinition result)
     {
-        MethodDefinition method = classDefinition.declareMethod(a(PUBLIC), "compute", type(Optional.class), ImmutableList.of());
+        MethodDefinition method = classDefinition.declareMethod(a(PUBLIC), "process", type(boolean.class), ImmutableList.of());
 
         Scope scope = method.getScope();
         Variable thisVariable = method.getThis();
@@ -299,49 +481,105 @@ public class PageFunctionCompiler
                         .condition(lessThan(index, to))
                         .update(index.increment())
                         .body(new BytecodeBlock()
-                                .append(thisVariable.invoke("evaluate", void.class, thisVariable.getField(session), thisVariable.getField(page), positions.getElement(index)))
-                                .append(generateCheckYieldBlock(thisVariable, index, yieldSignal, nextIndexOrPosition)))));
+                                .append(thisVariable.invoke("evaluate", void.class, thisVariable.getField(properties), thisVariable.getField(page), positions.getElement(index))))));
 
         ifStatement.ifFalse(new ForLoop("range based loop")
                 .initialize(index.set(from))
                 .condition(lessThan(index, to))
                 .update(index.increment())
                 .body(new BytecodeBlock()
-                        .append(thisVariable.invoke("evaluate", void.class, thisVariable.getField(session), thisVariable.getField(page), index))
-                        .append(generateCheckYieldBlock(thisVariable, index, yieldSignal, nextIndexOrPosition))));
+                        .append(thisVariable.invoke("evaluate", void.class, thisVariable.getField(properties), thisVariable.getField(page), index))));
 
-        body.comment("return Optional.of(this.blockBuilder.build());")
-                .append(invokeStatic(
-                        Optional.class,
-                        "of",
-                        Optional.class,
-                        thisVariable.getField(blockBuilder).invoke("build", Block.class).cast(Object.class)).ret());
+        Variable blocksBuilder = scope.declareVariable("blocksBuilder", body, invokeStatic(ImmutableList.class, "builder", ImmutableList.Builder.class));
+        Variable iterator = scope.createTempVariable(int.class);
+        ForLoop forLoop = new ForLoop("for (iterator = 0; iterator < this.blockBuilders.size(); iterator ++) blockBuildersBuilder.add(this.blockBuilders.get(iterator).builder();")
+                .initialize(iterator.set(constantInt(0)))
+                .condition(lessThan(iterator, constantInt(blockBuilderSize)))
+                .update(iterator.increment())
+                .body(new BytecodeBlock()
+                        .append(blocksBuilder.invoke(
+                                "add",
+                                ImmutableList.Builder.class,
+                                thisVariable.getField(blockBuilders).invoke("get", Object.class, iterator).cast(BlockBuilder.class).invoke("build", Block.class).cast(Object.class)).pop()));
+
+        body.append(forLoop)
+                .comment("result = blockBuildersBuilder.build(); return true")
+                .append(thisVariable.setField(result, blocksBuilder.invoke("build", ImmutableList.class)))
+                .push(true)
+                .retBoolean();
 
         return method;
     }
 
-    private static BytecodeBlock generateCheckYieldBlock(Variable thisVariable, Variable index, FieldDefinition yieldSignal, FieldDefinition nextIndexOrPosition)
+    private List<MethodDefinition> generateCommonSubExpressionMethods(
+            ClassDefinition classDefinition,
+            RowExpressionCompiler compiler,
+            Map<Integer, Map<RowExpression, VariableReferenceExpression>> commonSubExpressionsByLevel,
+            Map<VariableReferenceExpression, CommonSubExpressionFields> commonSubExpressionFieldsMap)
     {
-        return new BytecodeBlock()
-                .comment("if (yieldSignal.isSet()) return Optional.empty();")
-                .append(new IfStatement()
-                        .condition(thisVariable.getField(yieldSignal).invoke("isSet", boolean.class))
-                        .ifTrue(new BytecodeBlock()
-                                .comment("nextIndexOrPosition = index + 1;")
-                                .append(thisVariable.setField(nextIndexOrPosition, add(index, constantInt(1))))
-                                .comment("return Optional.empty();")
-                                .append(invokeStatic(Optional.class, "empty", Optional.class).ret())));
+        ImmutableList.Builder<MethodDefinition> methods = ImmutableList.builder();
+
+        Parameter properties = arg("properties", SqlFunctionProperties.class);
+        Parameter page = arg("page", Page.class);
+        Parameter position = arg("position", int.class);
+
+        int startLevel = commonSubExpressionsByLevel.keySet().stream().reduce(Math::min).get();
+        int maxLevel = commonSubExpressionsByLevel.keySet().stream().reduce(Math::max).get();
+        for (int i = startLevel; i <= maxLevel; i++) {
+            if (commonSubExpressionsByLevel.containsKey(i)) {
+                for (Map.Entry<RowExpression, VariableReferenceExpression> entry : commonSubExpressionsByLevel.get(i).entrySet()) {
+                    RowExpression cse = entry.getKey();
+                    Class<?> type = Primitives.wrap(cse.getType().getJavaType());
+                    VariableReferenceExpression cseVariable = entry.getValue();
+                    CommonSubExpressionFields cseFields = commonSubExpressionFieldsMap.get(cseVariable);
+                    MethodDefinition method = classDefinition.declareMethod(
+                            a(PRIVATE),
+                            "get" + cseVariable.getName(),
+                            type(cseFields.getResultType()),
+                            ImmutableList.<Parameter>builder()
+                                    .add(properties)
+                                    .add(page)
+                                    .add(position)
+                                    .build());
+
+                    method.comment("cse: %s", cse);
+
+                    Scope scope = method.getScope();
+                    BytecodeBlock body = method.getBody();
+                    Variable thisVariable = method.getThis();
+
+                    declareBlockVariables(ImmutableList.of(cse), page, scope, body);
+                    scope.declareVariable("wasNull", body, constantFalse());
+
+                    IfStatement ifStatement = new IfStatement()
+                            .condition(thisVariable.getField(cseFields.getEvaluatedField()))
+                            .ifFalse(new BytecodeBlock()
+                                    .append(thisVariable)
+                                    .append(compiler.compile(cse, scope, Optional.empty()))
+                                    .append(boxPrimitiveIfNecessary(scope, type))
+                                    .putField(cseFields.getResultField())
+                                    .append(thisVariable.setField(cseFields.getEvaluatedField(), constantBoolean(true))));
+
+                    body.append(ifStatement)
+                            .append(thisVariable)
+                            .getField(cseFields.getResultField())
+                            .retObject();
+
+                    methods.add(method);
+                }
+            }
+        }
+        return methods.build();
     }
 
     private MethodDefinition generateEvaluateMethod(
             ClassDefinition classDefinition,
-            CallSiteBinder callSiteBinder,
-            CachedInstanceBinder cachedInstanceBinder,
-            PreGeneratedExpressions preGeneratedExpressions,
-            RowExpression projection,
-            FieldDefinition blockBuilder)
+            RowExpressionCompiler compiler,
+            List<RowExpression> projections,
+            FieldDefinition blockBuilders,
+            Map<VariableReferenceExpression, CommonSubExpressionFields> cseFields)
     {
-        Parameter session = arg("session", ConnectorSession.class);
+        Parameter properties = arg("properties", SqlFunctionProperties.class);
         Parameter page = arg("page", Page.class);
         Parameter position = arg("position", int.class);
 
@@ -350,54 +588,82 @@ public class PageFunctionCompiler
                 "evaluate",
                 type(void.class),
                 ImmutableList.<Parameter>builder()
-                        .add(session)
+                        .add(properties)
                         .add(page)
                         .add(position)
                         .build());
 
-        method.comment("Projection: %s", projection.toString());
+        method.comment("Projections: %s", Joiner.on(", ").join(projections));
 
         Scope scope = method.getScope();
         BytecodeBlock body = method.getBody();
         Variable thisVariable = method.getThis();
 
-        declareBlockVariables(projection, page, scope, body);
+        declareBlockVariables(projections, page, scope, body);
+        Variable wasNull = scope.declareVariable("wasNull", body, constantFalse());
+        cseFields.values().forEach(fields -> body.append(thisVariable.setField(fields.getEvaluatedField(), constantBoolean(false))));
 
-        Variable wasNullVariable = scope.declareVariable("wasNull", body, constantFalse());
-        RowExpressionCompiler compiler = new RowExpressionCompiler(
-                callSiteBinder,
-                cachedInstanceBinder,
-                fieldReferenceCompiler(callSiteBinder),
-                metadata.getFunctionRegistry(),
-                preGeneratedExpressions);
-
-        body.append(thisVariable.getField(blockBuilder))
-                .append(compiler.compile(projection, scope))
-                .append(generateWrite(callSiteBinder, scope, wasNullVariable, projection.getType()))
-                .ret();
+        Variable outputBlockVariable = scope.createTempVariable(BlockBuilder.class);
+        for (int i = 0; i < projections.size(); i++) {
+            body.append(outputBlockVariable.set(thisVariable.getField(blockBuilders).invoke("get", Object.class, constantInt(i))))
+                    .append(compiler.compile(projections.get(i), scope, Optional.of(outputBlockVariable)))
+                    .append(constantBoolean(false))
+                    .putVariable(wasNull);
+        }
+        body.ret();
         return method;
     }
 
-    public Supplier<PageFilter> compileFilter(RowExpression filter, Optional<String> classNameSuffix)
+    @VisibleForTesting
+    public Supplier<PageFilter> compileFilter(
+            SqlFunctionProperties sqlFunctionProperties,
+            RowExpression filter,
+            boolean isOptimizeCommonSubExpression,
+            Optional<String> classNameSuffix)
     {
-        if (filterCache == null) {
-            return compileFilterInternal(filter, classNameSuffix);
-        }
-        return filterCache.getUnchecked(filter);
+        return compileFilter(sqlFunctionProperties, emptyMap(), filter, isOptimizeCommonSubExpression, classNameSuffix);
     }
 
-    private Supplier<PageFilter> compileFilterInternal(RowExpression filter, Optional<String> classNameSuffix)
+    public Supplier<PageFilter> compileFilter(
+            SqlFunctionProperties sqlFunctionProperties,
+            Map<SqlFunctionId, SqlInvokedFunction> sessionFunctions,
+            RowExpression filter,
+            boolean isOptimizeCommonSubExpression,
+            Optional<String> classNameSuffix)
+    {
+        if (filterCache == null) {
+            return compileFilterInternal(sqlFunctionProperties, sessionFunctions, filter, isOptimizeCommonSubExpression, classNameSuffix);
+        }
+        return filterCache.getUnchecked(new CacheKey(sqlFunctionProperties, sessionFunctions, ImmutableList.of(filter), isOptimizeCommonSubExpression));
+    }
+
+    private Supplier<PageFilter> compileFilterInternal(
+            SqlFunctionProperties sqlFunctionProperties,
+            Map<SqlFunctionId, SqlInvokedFunction> sessionFunctions,
+            RowExpression filter,
+            boolean isOptimizeCommonSubExpression,
+            Optional<String> classNameSuffix)
     {
         requireNonNull(filter, "filter is null");
 
         PageFieldsToInputParametersRewriter.Result result = rewritePageFieldsToInputParameters(filter);
 
         CallSiteBinder callSiteBinder = new CallSiteBinder();
-        ClassDefinition classDefinition = defineFilterClass(result.getRewrittenExpression(), result.getInputChannels(), callSiteBinder, classNameSuffix);
+        ClassDefinition classDefinition = defineFilterClass(
+                sqlFunctionProperties,
+                sessionFunctions,
+                result.getRewrittenExpression(),
+                result.getInputChannels(),
+                callSiteBinder,
+                isOptimizeCommonSubExpression,
+                classNameSuffix);
 
         Class<? extends PageFilter> functionClass;
         try {
             functionClass = defineClass(classDefinition, PageFilter.class, callSiteBinder.getBindings(), getClass().getClassLoader());
+        }
+        catch (PrestoException prestoException) {
+            throw prestoException;
         }
         catch (Exception e) {
             throw new PrestoException(COMPILER_ERROR, filter.toString(), e.getCause());
@@ -405,7 +671,7 @@ public class PageFunctionCompiler
 
         return () -> {
             try {
-                return functionClass.newInstance();
+                return functionClass.getConstructor().newInstance();
             }
             catch (ReflectiveOperationException e) {
                 throw new PrestoException(COMPILER_ERROR, e);
@@ -415,12 +681,17 @@ public class PageFunctionCompiler
 
     private static ParameterizedType generateFilterClassName(Optional<String> classNameSuffix)
     {
-        StringBuilder className = new StringBuilder(PageFilter.class.getSimpleName());
-        classNameSuffix.ifPresent(suffix -> className.append("_").append(suffix.replace('.', '_')));
-        return makeClassName(className.toString());
+        return makeClassName(PageFilter.class.getSimpleName(), classNameSuffix);
     }
 
-    private ClassDefinition defineFilterClass(RowExpression filter, InputChannels inputChannels, CallSiteBinder callSiteBinder, Optional<String> classNameSuffix)
+    private ClassDefinition defineFilterClass(
+            SqlFunctionProperties sqlFunctionProperties,
+            Map<SqlFunctionId, SqlInvokedFunction> sessionFunctions,
+            RowExpression filter,
+            InputChannels inputChannels,
+            CallSiteBinder callSiteBinder,
+            boolean isOptimizeCommonSubExpression,
+            Optional<String> classNameSuffix)
     {
         ClassDefinition classDefinition = new ClassDefinition(
                 a(PUBLIC, FINAL),
@@ -430,8 +701,55 @@ public class PageFunctionCompiler
 
         CachedInstanceBinder cachedInstanceBinder = new CachedInstanceBinder(classDefinition, callSiteBinder);
 
-        PreGeneratedExpressions preGeneratedExpressions = generateMethodsForLambdaAndTry(classDefinition, callSiteBinder, cachedInstanceBinder, filter);
-        generateFilterMethod(classDefinition, callSiteBinder, cachedInstanceBinder, preGeneratedExpressions, filter);
+        Map<LambdaDefinitionExpression, CompiledLambda> compiledLambdaMap = generateMethodsForLambda(
+                classDefinition,
+                callSiteBinder,
+                cachedInstanceBinder,
+                filter,
+                metadata,
+                sqlFunctionProperties,
+                sessionFunctions);
+
+        // cse
+        Map<VariableReferenceExpression, CommonSubExpressionFields> cseFields = ImmutableMap.of();
+        RowExpressionCompiler compiler = new RowExpressionCompiler(
+                classDefinition,
+                callSiteBinder,
+                cachedInstanceBinder,
+                new FieldAndVariableReferenceCompiler(callSiteBinder, cseFields),
+                metadata,
+                sqlFunctionProperties,
+                sessionFunctions,
+                compiledLambdaMap);
+
+        if (isOptimizeCommonSubExpression) {
+            Map<Integer, Map<RowExpression, VariableReferenceExpression>> commonSubExpressionsByLevel = collectCSEByLevel(filter);
+            if (!commonSubExpressionsByLevel.isEmpty()) {
+                cseFields = declareCommonSubExpressionFields(classDefinition, commonSubExpressionsByLevel);
+                compiler = new RowExpressionCompiler(
+                        classDefinition,
+                        callSiteBinder,
+                        cachedInstanceBinder,
+                        new FieldAndVariableReferenceCompiler(callSiteBinder, cseFields),
+                        metadata,
+                        sqlFunctionProperties,
+                        sessionFunctions,
+                        compiledLambdaMap);
+
+                generateCommonSubExpressionMethods(classDefinition, compiler, commonSubExpressionsByLevel, cseFields);
+                Map<RowExpression, VariableReferenceExpression> commonSubExpressions = commonSubExpressionsByLevel.values().stream()
+                        .flatMap(m -> m.entrySet().stream())
+                        .collect(toImmutableMap(Map.Entry::getKey, Map.Entry::getValue));
+                filter = rewriteExpressionWithCSE(filter, commonSubExpressions);
+                if (log.isDebugEnabled()) {
+                    log.debug("Extracted %d common sub-expressions", commonSubExpressions.size());
+                    commonSubExpressions.entrySet().forEach(entry -> log.debug("\t%s = %s", entry.getValue(), entry.getKey()));
+                    log.debug("Rewrote filter: %s", filter);
+                }
+            }
+        }
+
+        generateFilterMethod(classDefinition, compiler, filter, cseFields);
 
         FieldDefinition selectedPositions = classDefinition.declareField(a(PRIVATE), "selectedPositions", boolean[].class);
         generatePageFilterMethod(classDefinition, selectedPositions);
@@ -460,17 +778,26 @@ public class PageFunctionCompiler
                 .retObject();
 
         // constructor
-        generateConstructor(classDefinition, cachedInstanceBinder, preGeneratedExpressions, method -> {
-            Variable thisVariable = method.getScope().getThis();
-            method.getBody().append(thisVariable.setField(selectedPositions, newArray(type(boolean[].class), 0)));
-        });
+        MethodDefinition constructorDefinition = classDefinition.declareConstructor(a(PUBLIC));
 
+        BytecodeBlock body = constructorDefinition.getBody();
+        Variable thisVariable = constructorDefinition.getThis();
+
+        body.comment("super();")
+                .append(thisVariable)
+                .invokeConstructor(Object.class)
+                .append(thisVariable.setField(selectedPositions, newArray(type(boolean[].class), 0)));
+
+        initializeCommonSubExpressionFields(cseFields.values(), thisVariable, body);
+
+        cachedInstanceBinder.generateInitializations(thisVariable, body);
+        body.ret();
         return classDefinition;
     }
 
     private static MethodDefinition generatePageFilterMethod(ClassDefinition classDefinition, FieldDefinition selectedPositionsField)
     {
-        Parameter session = arg("session", ConnectorSession.class);
+        Parameter properties = arg("properties", SqlFunctionProperties.class);
         Parameter page = arg("page", Page.class);
 
         MethodDefinition method = classDefinition.declareMethod(
@@ -478,7 +805,7 @@ public class PageFunctionCompiler
                 "filter",
                 type(SelectedPositions.class),
                 ImmutableList.<Parameter>builder()
-                        .add(session)
+                        .add(properties)
                         .add(page)
                         .build());
 
@@ -498,7 +825,7 @@ public class PageFunctionCompiler
                 .initialize(position.set(constantInt(0)))
                 .condition(lessThan(position, positionCount))
                 .update(position.increment())
-                .body(selectedPositions.setElement(position, thisVariable.invoke("filter", boolean.class, session, page, position))));
+                .body(selectedPositions.setElement(position, thisVariable.invoke("filter", boolean.class, properties, page, position))));
 
         body.append(invokeStatic(
                 PageFilter.class,
@@ -513,12 +840,11 @@ public class PageFunctionCompiler
 
     private MethodDefinition generateFilterMethod(
             ClassDefinition classDefinition,
-            CallSiteBinder callSiteBinder,
-            CachedInstanceBinder cachedInstanceBinder,
-            PreGeneratedExpressions preGeneratedExpressions,
-            RowExpression filter)
+            RowExpressionCompiler compiler,
+            RowExpression filter,
+            Map<VariableReferenceExpression, CommonSubExpressionFields> cseFields)
     {
-        Parameter session = arg("session", ConnectorSession.class);
+        Parameter properties = arg("properties", SqlFunctionProperties.class);
         Parameter page = arg("page", Page.class);
         Parameter position = arg("position", int.class);
 
@@ -527,7 +853,7 @@ public class PageFunctionCompiler
                 "filter",
                 type(boolean.class),
                 ImmutableList.<Parameter>builder()
-                        .add(session)
+                        .add(properties)
                         .add(page)
                         .add(position)
                         .build());
@@ -536,86 +862,23 @@ public class PageFunctionCompiler
 
         Scope scope = method.getScope();
         BytecodeBlock body = method.getBody();
+        Variable thisVariable = scope.getThis();
 
-        declareBlockVariables(filter, page, scope, body);
+        declareBlockVariables(ImmutableList.of(filter), page, scope, body);
+        cseFields.values().forEach(fields -> body.append(thisVariable.setField(fields.getEvaluatedField(), constantBoolean(false))));
 
         Variable wasNullVariable = scope.declareVariable("wasNull", body, constantFalse());
-        RowExpressionCompiler compiler = new RowExpressionCompiler(
-                callSiteBinder,
-                cachedInstanceBinder,
-                fieldReferenceCompiler(callSiteBinder),
-                metadata.getFunctionRegistry(),
-                preGeneratedExpressions);
-
         Variable result = scope.declareVariable(boolean.class, "result");
-        body.append(compiler.compile(filter, scope))
+        body.append(compiler.compile(filter, scope, Optional.empty()))
                 // store result so we can check for null
                 .putVariable(result)
                 .append(and(not(wasNullVariable), result).ret());
         return method;
     }
 
-    private PreGeneratedExpressions generateMethodsForLambdaAndTry(
-            ClassDefinition containerClassDefinition,
-            CallSiteBinder callSiteBinder,
-            CachedInstanceBinder cachedInstanceBinder,
-            RowExpression expression)
+    private static void declareBlockVariables(List<RowExpression> expressions, Parameter page, Scope scope, BytecodeBlock body)
     {
-        Set<RowExpression> lambdaAndTryExpressions = ImmutableSet.copyOf(extractLambdaAndTryExpressions(expression));
-        ImmutableMap.Builder<CallExpression, MethodDefinition> tryMethodMap = ImmutableMap.builder();
-        ImmutableMap.Builder<LambdaDefinitionExpression, CompiledLambda> compiledLambdaMap = ImmutableMap.builder();
-
-        int counter = 0;
-        for (RowExpression lambdaOrTryExpression : lambdaAndTryExpressions) {
-            if (lambdaOrTryExpression instanceof LambdaDefinitionExpression) {
-                LambdaDefinitionExpression lambdaExpression = (LambdaDefinitionExpression) lambdaOrTryExpression;
-                PreGeneratedExpressions preGeneratedExpressions = new PreGeneratedExpressions(tryMethodMap.build(), compiledLambdaMap.build());
-                CompiledLambda compiledLambda = LambdaBytecodeGenerator.preGenerateLambdaExpression(
-                        lambdaExpression,
-                        "lambda_" + counter,
-                        containerClassDefinition,
-                        preGeneratedExpressions,
-                        callSiteBinder,
-                        cachedInstanceBinder,
-                        metadata.getFunctionRegistry());
-                compiledLambdaMap.put(lambdaExpression, compiledLambda);
-            }
-            else {
-                throw new VerifyException(format("unexpected expression: %s", lambdaOrTryExpression.toString()));
-            }
-            counter++;
-        }
-
-        return new PreGeneratedExpressions(tryMethodMap.build(), compiledLambdaMap.build());
-    }
-
-    private static void generateConstructor(
-            ClassDefinition classDefinition,
-            CachedInstanceBinder cachedInstanceBinder,
-            PreGeneratedExpressions preGeneratedExpressions,
-            Consumer<MethodDefinition> additionalStatements)
-    {
-        MethodDefinition constructorDefinition = classDefinition.declareConstructor(a(PUBLIC));
-
-        BytecodeBlock body = constructorDefinition.getBody();
-        Variable thisVariable = constructorDefinition.getThis();
-
-        body.comment("super();")
-                .append(thisVariable)
-                .invokeConstructor(Object.class);
-
-        additionalStatements.accept(constructorDefinition);
-
-        cachedInstanceBinder.generateInitializations(thisVariable, body);
-        for (CompiledLambda compiledLambda : preGeneratedExpressions.getCompiledLambdaMap().values()) {
-            compiledLambda.generateInitialization(thisVariable, body);
-        }
-        body.ret();
-    }
-
-    private static void declareBlockVariables(RowExpression expression, Parameter page, Scope scope, BytecodeBlock body)
-    {
-        for (int channel : getInputChannels(expression)) {
+        for (int channel : getInputChannels(expressions)) {
             scope.declareVariable("block_" + channel, body, page.invoke("getBlock", Block.class, constantInt(channel)));
         }
     }
@@ -623,7 +886,7 @@ public class PageFunctionCompiler
     private static List<Integer> getInputChannels(Iterable<RowExpression> expressions)
     {
         TreeSet<Integer> channels = new TreeSet<>();
-        for (RowExpression expression : Expressions.subExpressions(expressions)) {
+        for (RowExpression expression : subExpressions(expressions)) {
             if (expression instanceof InputReferenceExpression) {
                 channels.add(((InputReferenceExpression) expression).getField());
             }
@@ -631,25 +894,105 @@ public class PageFunctionCompiler
         return ImmutableList.copyOf(channels);
     }
 
-    private static List<Integer> getInputChannels(RowExpression expression)
+    private static int[] toIntArray(List<Integer> list)
     {
-        return getInputChannels(ImmutableList.of(expression));
-    }
-
-    private static List<Parameter> toBlockParameters(List<Integer> inputChannels)
-    {
-        ImmutableList.Builder<Parameter> parameters = ImmutableList.builder();
-        for (int channel : inputChannels) {
-            parameters.add(arg("block_" + channel, Block.class));
+        int[] array = new int[list.size()];
+        for (int i = 0; i < list.size(); i++) {
+            array[i] = list.get(i);
         }
-        return parameters.build();
+        return array;
     }
 
-    private static RowExpressionVisitor<BytecodeNode, Scope> fieldReferenceCompiler(CallSiteBinder callSiteBinder)
+    private static class FieldAndVariableReferenceCompiler
+            implements RowExpressionVisitor<BytecodeNode, Scope>
     {
-        return new InputReferenceCompiler(
-                (scope, field) -> scope.getVariable("block_" + field),
-                (scope, field) -> scope.getVariable("position"),
-                callSiteBinder);
+        private final InputReferenceCompiler inputReferenceCompiler;
+        private final Map<VariableReferenceExpression, CommonSubExpressionFields> variableMap;
+
+        public FieldAndVariableReferenceCompiler(CallSiteBinder callSiteBinder, Map<VariableReferenceExpression, CommonSubExpressionFields> variableMap)
+        {
+            this.inputReferenceCompiler = new InputReferenceCompiler(
+                    (scope, field) -> scope.getVariable("block_" + field),
+                    (scope, field) -> scope.getVariable("position"),
+                    callSiteBinder);
+            this.variableMap = ImmutableMap.copyOf(variableMap);
+        }
+        @Override
+        public BytecodeNode visitCall(CallExpression call, Scope context)
+        {
+            throw new UnsupportedOperationException();
+        }
+
+        @Override
+        public BytecodeNode visitInputReference(InputReferenceExpression reference, Scope context)
+        {
+            return inputReferenceCompiler.visitInputReference(reference, context);
+        }
+
+        @Override
+        public BytecodeNode visitConstant(ConstantExpression literal, Scope context)
+        {
+            throw new UnsupportedOperationException();
+        }
+
+        @Override
+        public BytecodeNode visitLambda(LambdaDefinitionExpression lambda, Scope context)
+        {
+            throw new UnsupportedOperationException();
+        }
+
+        @Override
+        public BytecodeNode visitVariableReference(VariableReferenceExpression reference, Scope context)
+        {
+            CommonSubExpressionFields fields = variableMap.get(reference);
+            return new BytecodeBlock()
+                    .append(context.getThis().invoke(fields.getMethodName(), fields.getResultType(), context.getVariable("properties"), context.getVariable("page"), context.getVariable("position")))
+                    .append(unboxPrimitiveIfNecessary(context, Primitives.wrap(reference.getType().getJavaType())));
+        }
+
+        @Override
+        public BytecodeNode visitSpecialForm(SpecialFormExpression specialForm, Scope context)
+        {
+            throw new UnsupportedOperationException();
+        }
+    }
+
+    private static final class CacheKey
+    {
+        private final SqlFunctionProperties sqlFunctionProperties;
+        private final Map<SqlFunctionId, SqlInvokedFunction> sessionFunctions;
+        private final List<RowExpression> rowExpressions;
+        private final boolean isOptimizeCommonSubExpression;
+
+        private CacheKey(SqlFunctionProperties sqlFunctionProperties, Map<SqlFunctionId, SqlInvokedFunction> sessionFunctions, List<RowExpression> rowExpressions, boolean isOptimizeCommonSubExpression)
+        {
+            requireNonNull(rowExpressions, "rowExpressions is null");
+            checkArgument(rowExpressions.size() >= 1, "Expect at least one RowExpression");
+            this.sqlFunctionProperties = requireNonNull(sqlFunctionProperties, "sqlFunctionProperties is null");
+            this.sessionFunctions = requireNonNull(sessionFunctions, "sessionFunctions is null");
+            this.rowExpressions = ImmutableList.copyOf(rowExpressions);
+            this.isOptimizeCommonSubExpression = isOptimizeCommonSubExpression;
+        }
+
+        @Override
+        public boolean equals(Object o)
+        {
+            if (this == o) {
+                return true;
+            }
+            if (!(o instanceof CacheKey)) {
+                return false;
+            }
+            CacheKey that = (CacheKey) o;
+            return Objects.equals(sqlFunctionProperties, that.sqlFunctionProperties) &&
+                    Objects.equals(rowExpressions, that.rowExpressions) &&
+                    isOptimizeCommonSubExpression == that.isOptimizeCommonSubExpression;
+        }
+
+        @Override
+        public int hashCode()
+        {
+            return Objects.hash(sqlFunctionProperties, rowExpressions, isOptimizeCommonSubExpression);
+        }
     }
 }
